--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "knplabs/github-api":               "~1.2",
+        "knplabs/github-api":               "1.2.1",
         "php-64bit":                        "~5.4",
         "psr/log":                          "*",
         "ql/mcp-core":                      "1.*",
