Adding sourcetree file to gitginore because it keeps recreating itself dumb self and bugging me.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@
 /src/QL/Hal/CachedContainer.php
 
 /.vagrant
+
+# dumb atlassian sourcetree file that keeps re-creating itself
+atlassian-ide-plugin.xml
